logs/dag_id=weather_dag_api/run_id=manual__2023-04-27T06:51:39.617091+00:00/task_id=cities.insert_data_Kharkiv/attempt=1.log
[2023-04-27T06:52:18.955+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kharkiv manual__2023-04-27T06:51:39.617091+00:00 [queued]>
[2023-04-27T06:52:19.021+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kharkiv manual__2023-04-27T06:51:39.617091+00:00 [queued]>
[2023-04-27T06:52:19.025+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T06:52:19.026+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-27T06:52:19.028+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T06:52:19.180+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Kharkiv> on 2023-04-27 06:51:39.617091+00:00
[2023-04-27T06:52:19.219+0000] {standard_task_runner.py:55} INFO - Started process 320 to run task
[2023-04-27T06:52:19.405+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Kharkiv', 'manual__2023-04-27T06:51:39.617091+00:00', '--job-id', '46', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpub0bqf44']
[2023-04-27T06:52:19.448+0000] {standard_task_runner.py:83} INFO - Job 46: Subtask cities.insert_data_Kharkiv
[2023-04-27T06:52:20.713+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Kharkiv manual__2023-04-27T06:51:39.617091+00:00 [running]> on host 80d943d8f5b4
[2023-04-27T06:52:21.869+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Kharkiv
AIRFLOW_CTX_EXECUTION_DATE=2023-04-27T06:51:39.617091+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-27T06:51:39.617091+00:00
[2023-04-27T06:52:21.871+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES (2023-04-26T10:20:00Z,
				18.4,
				0.0,
				4.3,
				Kharkiv);
[2023-04-27T06:52:21.967+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T06:52:30.843+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T06:52:30.894+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES (2023-04-26T10:20:00Z,
				18.4,
				0.0,
				4.3,
				Kharkiv);, parameters: None
[2023-04-27T06:52:30.951+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T10"
LINE 2:     VALUES (2023-04-26T10:20:00Z,
                              ^

[2023-04-27T06:52:31.369+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Kharkiv, execution_date=20230427T065139, start_date=20230427T065218, end_date=20230427T065231
[2023-04-27T06:52:31.559+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 46 for task cities.insert_data_Kharkiv (syntax error at or near "T10"
LINE 2:     VALUES (2023-04-26T10:20:00Z,
                              ^
; 320)
[2023-04-27T06:52:32.029+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-27T06:52:32.320+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
